glamor: Correctly specificy the stride parameter for glamor_put_image

The stride parameter is based on bits and is set according to
PixmapBytePad

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=74733
Signed-off-by: Anthony Waters <awaters1@gmail.com>
Reviewed-by: Zhigang Gong <zhigang.gong@linux.intel.com>